--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/universidadGrupo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\sonia\\Downloads\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\m\\OneDrive\\Escritorio\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.0.11.jar}
+    ${file.reference.mariadb-java-client-3.0.11.jar}:\
+    ${file.reference.mariadb-java-client-3.0.11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
