--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/universidadGrupo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\m\\OneDrive\\Escritorio\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\sonia\\Downloads\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\m\\OneDrive\\Escritorio\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
-    ${file.reference.mariadb-java-client-3.0.11.jar-1}
+    ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
