--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,15 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\m\\OneDrive\\Escritorio\\jcalendar-1
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\sonia\\OneDrive\\Documentos\\NetBeansProjects\\jCalendar.jar\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\sonia\\Downloads\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\m\\OneDrive\\Escritorio\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.0.11.jar-2=C:\\Users\\sonia\\Downloads\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mariadb-java-client-3.0.11.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
