--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\m\\OneDrive\\Escritorio\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\sonia\\OneDrive\\Documentos\\NetBeansProjects\\jCalendar.jar\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\sonia\\OneDrive\\Documentos\\NetBeansProjects\\jCalendar.jar\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\sonia\\Downloads\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\m\\OneDrive\\Escritorio\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.0.11.jar-2=C:\\Users\\sonia\\Downloads\\mariadb-java-client-3.0.11.jar
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar-1}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mariadb-java-client-3.0.11.jar-2}
+    ${file.reference.mariadb-java-client-3.0.11.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
