--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,8 @@
 compile.on.save=true
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\m\\OneDrive\\Escritorio\\jcalendar-1.4.zip
-file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\m\\OneDrive\\Escritorio\\mariadb-java-client-3.0.11.jar
-user.properties.file=C:\\Users\\sonia\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jcalendar-1.4.jar=C:\\Users\\fvg\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\fvg\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\fvg\\Downloads\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\fvg\\Downloads\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.0.11.jar-1=C:\\Users\\fvg\\Downloads\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.0.11.jar-2=C:\\Users\\fvg\\Downloads\\mariadb-java-client-3.0.11.jar
+user.properties.file=C:\\Users\\fvg\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
